; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_ectest.c_check_ec_key_field_public_range_test.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_ectest.c_check_ec_key_field_public_range_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@curves = common dso_local global %struct.TYPE_2__* null, align 8
@NID_X9_62_characteristic_two_field = common dso_local global i32 0, align 4
@NID_X9_62_prime_field = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"Unsupported EC_METHOD field_type\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @check_ec_key_field_public_range_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_ec_key_field_public_range_test(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  store i32* null, i32** %5, align 8
  store i32* null, i32** %6, align 8
  store i32* null, i32** %7, align 8
  store i32* null, i32** %8, align 8
  store i32* null, i32** %9, align 8
  store i32* null, i32** %10, align 8
  store i32* null, i32** %11, align 8
  %12 = call i32* (...) @BN_new()
  store i32* %12, i32** %9, align 8
  %13 = call i32 @TEST_ptr(i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %67

15:                                               ; preds = %1
  %16 = call i32* (...) @BN_new()
  store i32* %16, i32** %10, align 8
  %17 = call i32 @TEST_ptr(i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %67

19:                                               ; preds = %15
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** @curves, align 8
  %21 = load i32, i32* %2, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32* @EC_KEY_new_by_curve_name(i32 %25)
  store i32* %26, i32** %11, align 8
  %27 = call i32 @TEST_ptr(i32* %26)
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %67

29:                                               ; preds = %19
  %30 = load i32*, i32** %11, align 8
  %31 = call i32* @EC_KEY_get0_group(i32* %30)
  store i32* %31, i32** %6, align 8
  %32 = call i32 @TEST_ptr(i32* %31)
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %67

34:                                               ; preds = %29
  %35 = load i32*, i32** %6, align 8
  %36 = call i32* @EC_GROUP_method_of(i32* %35)
  store i32* %36, i32** %7, align 8
  %37 = call i32 @TEST_ptr(i32* %36)
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %67

39:                                               ; preds = %34
  %40 = load i32*, i32** %6, align 8
  %41 = call i32* @EC_GROUP_get0_field(i32* %40)
  store i32* %41, i32** %8, align 8
  %42 = call i32 @TEST_ptr(i32* %41)
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %67

44:                                               ; preds = %39
  %45 = load i32*, i32** %11, align 8
  %46 = call i32 @EC_KEY_generate_key(i32* %45)
  %47 = call i32 @TEST_int_gt(i32 %46, i32 0)
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %49, label %67

49:                                               ; preds = %44
  %50 = load i32*, i32** %11, align 8
  %51 = call i32 @EC_KEY_check_key(i32* %50)
  %52 = call i32 @TEST_int_gt(i32 %51, i32 0)
  %53 = icmp ne i32 %52, 0
  br i1 %53, label %54, label %67

54:                                               ; preds = %49
  %55 = load i32*, i32** %11, align 8
  %56 = call i32* @EC_KEY_get0_public_key(i32* %55)
  store i32* %56, i32** %5, align 8
  %57 = call i32 @TEST_ptr(i32* %56)
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %67

59:                                               ; preds = %54
  %60 = load i32*, i32** %6, align 8
  %61 = load i32*, i32** %5, align 8
  %62 = load i32*, i32** %9, align 8
  %63 = load i32*, i32** %10, align 8
  %64 = call i32 @EC_POINT_get_affine_coordinates(i32* %60, i32* %61, i32* %62, i32* %63, i32* null)
  %65 = call i32 @TEST_int_gt(i32 %64, i32 0)
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %68, label %67

67:                                               ; preds = %59, %54, %49, %44, %39, %34, %29, %19, %15, %1
  br label %108

68:                                               ; preds = %59
  %69 = load i32*, i32** %7, align 8
  %70 = call i32 @EC_METHOD_get_field_type(i32* %69)
  store i32 %70, i32* %4, align 4
  %71 = load i32, i32* %4, align 4
  %72 = load i32, i32* @NID_X9_62_characteristic_two_field, align 4
  %73 = icmp eq i32 %71, %72
  br i1 %73, label %74, label %83

74:                                               ; preds = %68
  %75 = load i32*, i32** %9, align 8
  %76 = load i32*, i32** %9, align 8
  %77 = load i32*, i32** %8, align 8
  %78 = call i32 @BN_GF2m_add(i32* %75, i32* %76, i32* %77)
  %79 = call i32 @TEST_true(i32 %78)
  %80 = icmp ne i32 %79, 0
  br i1 %80, label %82, label %81

81:                                               ; preds = %74
  br label %108

82:                                               ; preds = %74
  br label %99

83:                                               ; preds = %68
  %84 = load i32, i32* %4, align 4
  %85 = load i32, i32* @NID_X9_62_prime_field, align 4
  %86 = icmp eq i32 %84, %85
  br i1 %86, label %87, label %96

87:                                               ; preds = %83
  %88 = load i32*, i32** %9, align 8
  %89 = load i32*, i32** %9, align 8
  %90 = load i32*, i32** %8, align 8
  %91 = call i32 @BN_add(i32* %88, i32* %89, i32* %90)
  %92 = call i32 @TEST_true(i32 %91)
  %93 = icmp ne i32 %92, 0
  br i1 %93, label %95, label %94

94:                                               ; preds = %87
  br label %108

95:                                               ; preds = %87
  br label %98

96:                                               ; preds = %83
  %97 = call i32 @TEST_error(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0))
  br label %108

98:                                               ; preds = %95
  br label %99

99:                                               ; preds = %98, %82
  %100 = load i32*, i32** %11, align 8
  %101 = load i32*, i32** %9, align 8
  %102 = load i32*, i32** %10, align 8
  %103 = call i32 @EC_KEY_set_public_key_affine_coordinates(i32* %100, i32* %101, i32* %102)
  %104 = call i32 @TEST_int_le(i32 %103, i32 0)
  %105 = icmp ne i32 %104, 0
  br i1 %105, label %107, label %106

106:                                              ; preds = %99
  br label %108

107:                                              ; preds = %99
  store i32 1, i32* %3, align 4
  br label %108

108:                                              ; preds = %107, %106, %96, %94, %81, %67
  %109 = load i32*, i32** %9, align 8
  %110 = call i32 @BN_free(i32* %109)
  %111 = load i32*, i32** %10, align 8
  %112 = call i32 @BN_free(i32* %111)
  %113 = load i32*, i32** %11, align 8
  %114 = call i32 @EC_KEY_free(i32* %113)
  %115 = load i32, i32* %3, align 4
  ret i32 %115
}

declare dso_local i32 @TEST_ptr(i32*) #1

declare dso_local i32* @BN_new(...) #1

declare dso_local i32* @EC_KEY_new_by_curve_name(i32) #1

declare dso_local i32* @EC_KEY_get0_group(i32*) #1

declare dso_local i32* @EC_GROUP_method_of(i32*) #1

declare dso_local i32* @EC_GROUP_get0_field(i32*) #1

declare dso_local i32 @TEST_int_gt(i32, i32) #1

declare dso_local i32 @EC_KEY_generate_key(i32*) #1

declare dso_local i32 @EC_KEY_check_key(i32*) #1

declare dso_local i32* @EC_KEY_get0_public_key(i32*) #1

declare dso_local i32 @EC_POINT_get_affine_coordinates(i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @EC_METHOD_get_field_type(i32*) #1

declare dso_local i32 @TEST_true(i32) #1

declare dso_local i32 @BN_GF2m_add(i32*, i32*, i32*) #1

declare dso_local i32 @BN_add(i32*, i32*, i32*) #1

declare dso_local i32 @TEST_error(i8*) #1

declare dso_local i32 @TEST_int_le(i32, i32) #1

declare dso_local i32 @EC_KEY_set_public_key_affine_coordinates(i32*, i32*, i32*) #1

declare dso_local i32 @BN_free(i32*) #1

declare dso_local i32 @EC_KEY_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
